apps/namespaces/media-server/radarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: radarr-data
          mountPath: /config
        - name: nfs-media
          mountPath: /movies
          subPath: movies
        - name: nfs-media
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: radarr-data
        persistentVolumeClaim:
          claimName: radarr-data-pvc
      - name: nfs-media
        persistentVolumeClaim:
          claimName: media-server-nfs-pvc
