apps/namespaces/media-server/radarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: radarr
  type: ClusterIP
