apps/namespaces/media-server/radarr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media-server
spec:
  rules:
    - host: radarr.home
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 80
            path: /
            pathType: Prefix
